Adds raw waterfall endpoint.

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body>
   <div id="root"></div>
   <script type="module">
-    import Main from '/js/pages/main.js'
+    import Main from '/raw/pages/main.js'
     const root = document.getElementById('root')
     root.innerHTML = Main()
   </script>
