--- a/public/bundle.html
+++ b/public/bundle.html
@@ -7,8 +7,11 @@
   <link href="data:image/x-icon;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" rel="icon" type="image/x-icon">
 </head>
 <body>
-  <a href="/waterfall.html">Waterfall</a>
-  <a href="/push.html">Push</a>
-  <a href="/bundle.html">Bundle</a>
+  <div id="root"></div>
+  <script type="module">
+    import Main from '/js/pages/main.js'
+    const root = document.getElementById('root')
+    root.innerHTML = Main()
+  </script>
 </body>
 </html>
