--- a/public/push.html
+++ b/public/push.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="root"></div>
-  <script type="module">
+  <script type="module" crossorigin="use-credentials">
     import Main from '/push/pages/main.js'
     const root = document.getElementById('root')
     root.innerHTML = Main()
