--- a/public/push.html
+++ b/public/push.html
@@ -8,10 +8,6 @@
 </head>
 <body>
   <div id="root"></div>
-  <script type="module" crossorigin="use-credentials">
-    import Main from '/push/pages/main.js'
-    const root = document.getElementById('root')
-    root.innerHTML = Main()
-  </script>
+  <script type="module" src="/push/pages/main.js" crossorigin="use-credentials"></script>
 </body>
 </html>
