--- a/public/waterfall.html
+++ b/public/waterfall.html
@@ -8,11 +8,7 @@
 </head>
 <body>
   <div id="root"></div>
-  <script type="module">
-    import Main from '/raw/pages/main.js'
-    const root = document.getElementById('root')
-    root.innerHTML = Main()
-  </script>
+  <script type="module" src="/raw/pages/main.js" crossorigin="use-credentials"></script>
 </body>
 </html>
 
